# ZapLang

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  GAME_LICENSE  README.md  \
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: array.zap  assign.zap  branch.zap  complex_math.zap  defer.zap  for_loop.zap  game_systems.zap  simple.zap  simple_branch.zap  while_loop_example.zap
src/: ASTVisitor.cpp  ASTVisitor.h  LLVMListener.cpp  LLVMListener.h  ast.rs  common.h  lib.rs  main.cpp  main.rs  zap.lalrpop
src/Containers/: ObjectHolder.h  String.cpp  String.h
src/Memory/: Arena.h
src/Memory/Allocators/: LinearAllocator.cpp  StackAllocator.cpp
src/antlr/: ZapLexer.cpp  ZapLexer.h  ZapLexer.interp  ZapLexer.tokens  zap.g4  zap.interp  zap.tokens  zapBaseListener.h  zapBaseVisitor.cpp  zapBaseVisitor.h  zapLexer.cpp  zapLexer.h  zapLexer.interp  zapLexer.tokens  zapListener.cpp  zapListener.h  zapParser.cpp  zapParser.h  zapVisitor.cpp  zapVisitor.h
src/ast/: ASTVisitor.cpp  ASTVisitor.h  Argument.h  Function.h  ast.h  ast_printer.cpp  ast_printer.h
src/containers/: Array.h  ArrayRef.h  DynArray.h  DynStackArray.h  ObjectHolder.h  StackArray.h  String.cpp  String.h
src/ir/: README.md  ir.cpp  ir.h
src/logger/: Logger.cpp  Logger.h
src/memory/: Allocator.c  Allocator.h  Arena.c  Arena.cpp  Arena.h  STLArenaAllocator.h
src/memory/Allocators/: LinearAllocator.cpp  PoolAllocator.c  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.c  StackAllocator.cpp  StackAllocator.h
src/packcc/: zap.peg
src/runtime/: Engine.cpp  Engine.h  common.h
src/runtime/Components/: Components.h
src/runtime/Containers/: ArrayRef.h  DynArray.h  DynStackArray.h  ObjectHolder.h  StackArray.h  String.cpp  String.h
src/runtime/Logging/: Logger.cpp  Logger.h
src/runtime/Memory/: Arena.cpp  Arena.h  STLArenaAllocator.h
src/runtime/Memory/Allocators/: LinearAllocator.h  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h
src/runtime/Systems/: CoreEngineSystems.cpp  CoreEngineSystems.h  PlayerMovementSystems.cpp  PlayerMovementSystems.h
src/runtime/Vulkan/: Camera.cpp  Camera.h  VulkanModel.cpp  VulkanModel.h  VulkanRenderInfo.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanTexture.cpp  VulkanTexture.h
src/runtime/Vulkan/Wrappers/: DeviceBufferWrapper.cpp  DeviceBufferWrapper.h  PipelineWrapper.cpp  PipelineWrapper.h  QueueWrapper.cpp  QueueWrapper.h  SurfaceWrapper.cpp  SurfaceWrapper.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h
src/typechecker/: TypeChecker.cpp  TypeChecker.h
